--- a/.github/workflows/Deploy.yaml
+++ b/.github/workflows/Deploy.yaml
@@ -11,15 +11,15 @@ jobs:
     - uses: actions/checkout@main
 
       # Log into Azure
-    - uses: azure/login@v1
+    - uses: azure/actions/login@v1
       with:
-        creds: ${{ secrets.AZURE_CONNECTION_PROD }}
+        creds: ${{ secrets.AZURE_CONNECTION_LAB }}
 
        # Deploy ARM template
     - name: deploy_vnet
       uses: azure/arm-deploy@v1
       with:
-        subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
-        resourceGroupName: ${{ secrets.AZURE_RG }}
+        subscriptionId: ${{ secrets.LAB_AZURE_SUBSCRIPTION }}
+        resourceGroupName: ${{ secrets.LAB_AZURE_RG }}
         template: ./code/Arm.json
         parameters: ./code/parameters.json
