--- a/.github/workflows/Deploy.yaml
+++ b/.github/workflows/Deploy.yaml
@@ -13,7 +13,8 @@ jobs:
       # Log into Azure
     - uses: azure/actions/login@v1
       with:
-        creds: ${{ secrets.AZURE_CONNECTION_LAB }}
+        #creds: ${{ secrets.AZURE_CONNECTION_LAB }}
+        creds: '{"clientId":"${{ secrets.LAB_CLIENT_ID }}","clientSecret":"${{ secrets.LAB_CLIENT_SECRET }}","subscriptionId":"${{ secrets.LAB_SUBSCRIPTION_ID }}","tenantId":"${{ secrets.LAB_TENANT_ID }}"}'
 
        # Deploy ARM template
     - name: deploy_vnet
