--- a/.github/workflows/Deploy2_branch1.yaml
+++ b/.github/workflows/Deploy2_branch1.yaml
@@ -13,8 +13,8 @@ jobs:
       # Log into Azure
     - uses: azure/actions/login@v1
       with:
-        #creds: ${{ secrets.AZURE_CONNECTION_LAB }}
-        creds: '{"clientId":"${{ secrets.LAB_CLIENT_ID }}","clientSecret":"${{ secrets.LAB_CLIENT_SECRET }}","tenantId":"${{ secrets.LAB_TENANT_ID }}","subscriptionId":"${{ secrets.LAB_SUBSCRIPTION_ID }}"}'
+        creds: ${{ secrets.AZURE_CONNECTION_LAB }}
+        #creds: '{"clientId":"${{ secrets.LAB_CLIENT_ID }}","clientSecret":"${{ secrets.LAB_CLIENT_SECRET }}","tenantId":"${{ secrets.LAB_TENANT_ID }}","subscriptionId":"${{ secrets.LAB_SUBSCRIPTION_ID }}"}'
 
        # Deploy ARM template
     - name: deploy_vnet
